# final-project-rbgale

./: CHANGELOG.md  compare.py  contact.txt  final-project-rbgale.cabal  progress.txt  proposal.txt  report.txt  resources.txt  submitted.txt
app/: Main.hs
src/: Printing.hs  Solver.hs  Types.hs  Verify.hs
src/Encoder/: Sudoku.hs
src/Parser/: Common.hs  DIMACS.hs  Sudoku.hs
src/Solver/: Mutable.hs  Pure.hs
test/: dimacs-satisfiable.cnf  dimacs-unsatisfiable.cnf  sudoku.sdk
